feat: add Transaction usecase in banco-exemplo
