# banco-exemplo/src/main/http/routes/transaction.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express'
+import { adaptRoute } from '../express/express-route-adapter'
+import { makeTransactionController } from '../factory-controllers/transaction-controller-factory'
+
+
+export default (router: Router): void => {
+	router.post('/transaction/pix', adaptRoute(makeTransactionController())) 	
+}
