# banco-exemplo/src/main/http/swagger/swagger.json
@@ -1,9 +1,9 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "API de Contas",
+        "title": "API do Banco",
         "version": "1.0.0",
-        "description": "Documentação da API de Contas"
+        "description": "Api banco"
     },
     "servers": [
         {
@@ -322,6 +322,75 @@
                 "responses": {
                     "201": {
                         "description": ""
+                    },
+                    "400": {
+                        "description": "Requisição inválida",
+                        "content": {
+                            "application/json": {
+                                "examples": {
+                                    "exemplo-2": {
+                                        "value": {
+                                            "message": "error message",
+                                            "error": "Error"
+                                          }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Requisição inválida",
+                        "content": {
+                            "application/json": {
+                                "examples": {
+                                    "exemplo-2": {
+                                        "value": {
+                                            "message": "Internal server error",
+                                            "error": "Error"
+                                          }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/transaction/pix": {
+            "post": {
+                "summary": "Realiza transações utilizando o pix",
+                "tags": [
+                    "Contas"
+                ],
+                "requestBody": {
+                    "description": "Dados da conta a ser criada",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "payer_cpf": {
+                                        "type": "string",
+                                        "pattern": "^[0-9]{3}\\.[0-9]{3}\\.[0-9]{3}-[0-9]{2}$",
+                                        "description": "CPF do pagador (formato: XXX.XXX.XXX-XX)"
+                                    },
+                                    "receiver_pixkey": {
+                                        "type": "string",
+                                        "description": "string"
+                                    },
+                                    "value": {
+                                        "type": "number",
+                                        "description": "200"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Conta criada com sucesso"
                     },
                     "400": {
                         "description": "Requisição inválida",
